2011-04-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Track, tag and attachment selection via
	--audio-tracks, --video-tracks etc. can have their meaning
	reversed by prefixing the list of IDs with "!". If it is then
	mkvmerge will copy all tracks/tags/attachments but the ones with
	the IDs given to the option (e.g. "--attachments !3,6").

	* mkvmerge: bug fix: Fixed handling AVIs with AAC audio format tag
	0x706d and bogus private data size. Fix for bug 623.

2011-04-20  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.7.0.

	* build system: For the time being the build system will always
	build and link statically against the internal versions of libEBML
	and libMatroska.

	* mkvmerge: bug fix: Fixed appending timecode calculation for
	appended subtitle tracks if the subtitle tracks are read from
	complex containers (e.g. Matroska, MP4, AVI etc). Fix for bug 620.

2011-04-15  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: Fixed extraction of MPEG-1/2 video tracks
	whose sequence headers change mid-stream but whose key frames are
	not all prefixed with a sequence header. Fix for bug 556.

	* mkvmerge: bug fix: Fixed reading AAC tracks from AVI files with
	7 bytes long codec data. Fix for bug 613.

	* mkvmerge: enhancement: Added support for WAV and AVI files that
	use a WAVEFORMATEXTENSIBLE structure (wFormatTag == 0xfffe). Fix
	for bug 614.

2011-04-14  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: The output file name extension will be updated on
	each track selection changed as well. The extension is based on
	the actually selected tracks, not on the presence of tracks of
	certain types. Fix for bug 615.

2011-04-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: mkvmerge was dropping the last full DTS
	packet from a DTS files if that file was not encoded in "14-in-16"
	mode and if the file size was not divisible by 16.

2011-03-23  Moritz Bunkus  <moritz@bunkus.org>
